--- a/nodesAndEdges.ipynb
+++ b/nodesAndEdges.ipynb
@@ -23,26 +23,30 @@
     "# Generate dictionary of links; for each Col1, I want \n",
     "    # there to be a link between each Col3 and every other Col3 in the same Col1\n",
     "links = {data[\"Col2\"].index[index]:list(data[(data[\"Col1\"]==data[\"Col1\"][index]) & (data[\"Col2\"]!=data[\"Col2\"][index])].index) for index in data[\"Col2\"].index}\n",
+    "links_list = []\n",
+    "for key in links.keys():\n",
+    "    links_list.append(links[key])\n",
     "    \n",
     "# bokeh ColumnDataSource1 = (x, y) placeholder coordinates for start and end points of each link\n",
     "source1 = ColumnDataSource({'x0': [], 'y0': [], 'x1': [], 'y1': []})\n",
     "\n",
     "# bokeh ColumnDataSource2 = DataFrame, itself\n",
-    "source2 = ColumnDataSource(data)\n",
+    "source2 = ColumnDataSource({'x0': [], 'y0': [], 'x1': [], 'y1': []})\n",
     "\n",
     "# bokeh ColumnDataSource3 = associating Col2, Col1, and (x, y) coordinates\n",
-    "source3 = ColumnDataSource({\"x\":x,\"y\":y,'Col2':list(data['Col2']),'Col1':list(data['Col1'])})\n",
+    "source3 = ColumnDataSource({\"x\":x,\"y\":y,'Col2':list(data['Col2']),'Col1':list(data['Col1']), 'Links':links_list})\n",
     "\n",
     "# Set up Graph and Output file\n",
     "output_file(\"sanitized_example.html\")\n",
     "p = figure(width=1900, height=700)\n",
     "\n",
     "# Set up line segment and circle frameworks\n",
-    "sr = p.segment(x0='x0', y0='y0', x1='x1', y1='y1', color='red', alpha=0.4, line_width=.5, source=source1, )\n",
+    "sr1 = p.segment(x0='x0', y0='y0', x1='x1', y1='y1', color='red', alpha=0.4, line_width=.5, source=source1)\n",
+    "sr2 = p.segment(x0='x0', y0='y0', x1='x1', y1='y1', color='red', alpha=0.4, line_width=.5, source=source2)\n",
     "cr = p.circle(x='x', y='y', color='blue', size=5, alpha=1, hover_color='orange', hover_alpha=1.0, source=source3)\n",
     "\n",
     "# Add JS string for HoverTool Callback\n",
-    "code = \"\"\"\n",
+    "code_for_hover = \"\"\"\n",
     "const links = %s\n",
     "const data = {'x0': [], 'y0': [], 'x1': [], 'y1': []}\n",
     "const indices = cb_data.index.indices\n",
@@ -59,18 +63,35 @@
     "segment.data = data\n",
     "\"\"\" % links\n",
     "\n",
-    "# Add JS string for DataTable populating\n",
-    "\n",
+    "# Add JS string for Tap segments\n",
+    "code_for_tap = \"\"\"\n",
+    "const links = %s;\n",
+    "const data = {'x0': [], 'y0': [], 'x1': [], 'y1': []};\n",
+    "const indices = cb_obj.indices;\n",
+    "for (let i = 0; i < indices.length; i++) {\n",
+    "    const start = indices[i];\n",
+    "    for (let j = 0; j < links[start].length; j++) {\n",
+    "        const end = links[start][j];\n",
+    "        data['x0'].push(circle.data.x[start]);\n",
+    "        data['y0'].push(circle.data.y[start]);\n",
+    "        data['x1'].push(circle.data.x[end]);\n",
+    "        data['y1'].push(circle.data.y[end]);\n",
+    "    }\n",
+    "}\n",
+    "segment.data = data;\n",
+    "\"\"\" % links\n",
     "\n",
     "# Establish Tooltips\n",
     "TOOLTIPS = [(\"Col2\",\"@Col2\"), (\"Col1\",\"@Col1\")]\n",
     "\n",
     "# Create JavaScript Callbacks\n",
-    "callback = CustomJS(args={'circle': cr.data_source, 'segment': sr.data_source}, code=code)\n",
+    "callback_on_hover = CustomJS(args={'circle': cr.data_source, 'segment': sr1.data_source}, code=code_for_hover)\n",
+    "callback_on_tap = CustomJS(args={'circle': cr.data_source, 'segment': sr2.data_source}, code=code_for_tap)\n",
     "\n",
     "# Add tools to the Graph\n",
-    "p.add_tools(HoverTool(tooltips=TOOLTIPS, callback=callback, renderers=[cr]))\n",
+    "p.add_tools(HoverTool(tooltips=TOOLTIPS, callback=callback_on_hover, renderers=[cr]))\n",
     "p.add_tools(TapTool())\n",
+    "source3.selected.js_on_change('indices', callback_on_tap)\n",
     "\n",
     "# Show the graph\n",
     "show(p)"
@@ -79,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "196c73c3",
+   "id": "f90a5d92",
    "metadata": {},
    "outputs": [],
    "source": []
