--- a/nodesAndEdges.ipynb
+++ b/nodesAndEdges.ipynb
@@ -10,8 +10,9 @@
     "# import packages\n",
     "import pandas as pd\n",
     "\n",
-    "from bokeh.models import ColumnDataSource, CustomJS, HoverTool, TapTool\n",
     "from bokeh.plotting import figure, output_file, show\n",
+    "from bokeh.layouts import column, row\n",
+    "from bokeh.models import BoxAnnotation, BoxZoomTool, ColumnDataSource, CustomJS, DataTable, HoverTool, PanTool, TableColumn, TapTool\n",
     "\n",
     "# Read in the DataFrame\n",
     "data = pd.read_csv(\"sanitized_data.csv\")\n",
@@ -27,6 +28,14 @@
     "for key in links.keys():\n",
     "    links_list.append(links[key])\n",
     "    \n",
+    "# Bokeh setup\n",
+    "output_file(\"Boroughs_Nets.html\")\n",
+    "p1 = figure(width=1500, height=500, tools=\"pan,wheel_zoom,reset\")\n",
+    "nonsel_color = '#f8faa2'\n",
+    "sel_color = 'orange'\n",
+    "nosel_color = '#42b9f5'\n",
+    "high_color = 'green'\n",
+    "\n",
     "# bokeh ColumnDataSource1 = (x, y) placeholder coordinates for start and end points of each link\n",
     "source1 = ColumnDataSource({'x0': [], 'y0': [], 'x1': [], 'y1': []})\n",
     "\n",
@@ -34,19 +43,20 @@
     "source2 = ColumnDataSource({'x0': [], 'y0': [], 'x1': [], 'y1': []})\n",
     "\n",
     "# bokeh ColumnDataSource3 = associating Col2, Col1, and (x, y) coordinates\n",
-    "source3 = ColumnDataSource({\"x\":x,\"y\":y,'Col2':list(data['Col2']),'Col1':list(data['Col1']), 'Links':links_list})\n",
-    "\n",
-    "# Set up Graph and Output file\n",
-    "output_file(\"sanitized_example.html\")\n",
-    "p = figure(width=1900, height=700)\n",
+    "source3 = ColumnDataSource({\"x\":x,\"y\":y,'Col2':list(data['Col2']),\n",
+    "                            'Col1':list(data['Col1']), 'Col3':list(data['Col3']), 'Links':links_list,\n",
+    "                            'color':[nonsel_color]*len(x)})\n",
     "\n",
     "# Set up line segment and circle frameworks\n",
-    "sr1 = p.segment(x0='x0', y0='y0', x1='x1', y1='y1', color='red', alpha=0.4, line_width=.5, source=source1)\n",
-    "sr2 = p.segment(x0='x0', y0='y0', x1='x1', y1='y1', color='red', alpha=0.4, line_width=.5, source=source2)\n",
-    "cr = p.circle(x='x', y='y', color='blue', size=5, alpha=1, hover_color='orange', hover_alpha=1.0, source=source3)\n",
+    "cr = p1.circle(x='x', y='y', color=nosel_color, size=6, alpha=1, \n",
+    "              hover_color='orange', hover_alpha=1.0, source=source3,\n",
+    "              selection_color=high_color,\n",
+    "              nonselection_fill_color='color', nonselection_fill_alpha=1)\n",
+    "sr1 = p1.segment(x0='x0', y0='y0', x1='x1', y1='y1', color='red', alpha=0.4, line_width=.5, source=source1)\n",
+    "sr2 = p1.segment(x0='x0', y0='y0', x1='x1', y1='y1', color='red', alpha=0.4, line_width=.5, source=source2)\n",
     "\n",
     "# Add JS string for HoverTool Callback\n",
-    "code_for_hover = \"\"\"\n",
+    "hov_code = \"\"\"\n",
     "const links = %s\n",
     "const data = {'x0': [], 'y0': [], 'x1': [], 'y1': []}\n",
     "const indices = cb_data.index.indices\n",
@@ -64,8 +74,11 @@
     "\"\"\" % links\n",
     "\n",
     "# Add JS string for Tap segments\n",
-    "code_for_tap = \"\"\"\n",
+    "tap_code = \"\"\"\n",
     "const links = %s;\n",
+    "for (let j = 0; j < circle.data.color.length; j++) {\n",
+    "    circle.data.color[j]='%s';\n",
+    "}\n",
     "const data = {'x0': [], 'y0': [], 'x1': [], 'y1': []};\n",
     "const indices = cb_obj.indices;\n",
     "for (let i = 0; i < indices.length; i++) {\n",
@@ -76,31 +89,71 @@
     "        data['y0'].push(circle.data.y[start]);\n",
     "        data['x1'].push(circle.data.x[end]);\n",
     "        data['y1'].push(circle.data.y[end]);\n",
+    "        circle.data.color[end]='%s';\n",
     "    }\n",
     "}\n",
+    "circle.change.emit();\n",
     "segment.data = data;\n",
-    "\"\"\" % links\n",
+    "\"\"\" % (links, nonsel_color, sel_color)\n",
+    "\n",
+    "# JavaScript code for minimap\n",
+    "mmp_code = \"\"\"\n",
+    "    box[%r] = cb_obj.start\n",
+    "    box[%r] = cb_obj.end\n",
+    "\"\"\"\n",
+    "\n",
+    "# Create the box that functions as the current view in the minimap\n",
+    "box = BoxAnnotation(left=0, right=0, bottom=0, top=0, fill_alpha=0.1, line_color='black', fill_color='black')\n",
     "\n",
     "# Establish Tooltips\n",
     "TOOLTIPS = [(\"Col2\",\"@Col2\"), (\"Col1\",\"@Col1\")]\n",
     "\n",
-    "# Create JavaScript Callbacks\n",
-    "callback_on_hover = CustomJS(args={'circle': cr.data_source, 'segment': sr1.data_source}, code=code_for_hover)\n",
-    "callback_on_tap = CustomJS(args={'circle': cr.data_source, 'segment': sr2.data_source}, code=code_for_tap)\n",
+    "# Create callbacks for HoverTool and TapTool\n",
+    "hov_cb = CustomJS(args={'circle': cr.data_source, 'segment': sr1.data_source}, code=hov_code)\n",
+    "tap_cb = CustomJS(args={'circle': cr.data_source, 'segment': sr2.data_source}, code=tap_code)\n",
+    "xcb = CustomJS(args=dict(box=box), code=mmp_code % ('left', 'right'))\n",
+    "ycb = CustomJS(args=dict(box=box), code=mmp_code % ('bottom', 'top'))\n",
     "\n",
-    "# Add tools to the Graph\n",
-    "p.add_tools(HoverTool(tooltips=TOOLTIPS, callback=callback_on_hover, renderers=[cr]))\n",
-    "p.add_tools(TapTool())\n",
-    "source3.selected.js_on_change('indices', callback_on_tap)\n",
+    "# Add HoverTool, PanTool-Horizontal, PanTool-Vertical, BoxZoomTool, and TapTool to main graph\n",
+    "p1.add_tools(HoverTool(tooltips=TOOLTIPS, callback=hov_cb, renderers=[cr]))\n",
+    "p1.add_tools(TapTool())\n",
+    "p1.add_tools(PanTool(dimensions='width'))\n",
+    "p1.add_tools(PanTool(dimensions='height'))\n",
+    "p1.add_tools(BoxZoomTool(match_aspect=True))\n",
     "\n",
-    "# Show the graph\n",
-    "show(p)"
+    "# Call the tap_cb CustomJS callback when you tap\n",
+    "source3.selected.js_on_change('indices', tap_cb)\n",
+    "\n",
+    "# Create DataTable\n",
+    "columns = [TableColumn(field='Col2', title=\"Col2\"), TableColumn(field='Col3', title=\"Col3\"), TableColumn(field='Col1', title=\"Col1\")]\n",
+    "data_table = DataTable(source=source3, columns=columns, width=400, height=280, scroll_to_selection=True, selectable=True)\n",
+    "\n",
+    "# Dictate view window behavior\n",
+    "p1.x_range.js_on_change('start', xcb)\n",
+    "p1.x_range.js_on_change('end', xcb)\n",
+    "p1.y_range.js_on_change('start', ycb)\n",
+    "p1.y_range.js_on_change('end', ycb)\n",
+    "\n",
+    "# Create minimap graph\n",
+    "p2 = figure(width=400, height=160)\n",
+    "cr2 = p2.circle(x='x', y='y', color=nosel_color, size=1, alpha=1, source=source3)\n",
+    "p2.axis.visible = False\n",
+    "p2.toolbar.logo = None\n",
+    "p2.toolbar_location = None\n",
+    "p2.xgrid.grid_line_color = None\n",
+    "p2.ygrid.grid_line_color = None\n",
+    "p2.add_layout(box)\n",
+    "\n",
+    "# Order the graphs and the DataTable, then display them\n",
+    "layout = row(p1, column(p2, data_table))\n",
+    "\n",
+    "show(layout)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f90a5d92",
+   "id": "35e8c1b5",
    "metadata": {},
    "outputs": [],
    "source": []
